Relax redundant Monoid, Monad constraints.
-Wredundant-constraints picked up some redundant contraints.
This patch removes them and enables -Wredundant-constraints in
the .cabal file.

--- a/digestive-functors/digestive-functors.cabal
+++ b/digestive-functors/digestive-functors.cabal
@@ -46,7 +46,7 @@ Extra-source-files:
 
 Library
   Hs-source-dirs: src
-  Ghc-options:    -Wall -fwarn-tabs
+  Ghc-options:    -Wall -fwarn-tabs -Wredundant-constraints
 
   Exposed-modules:
     Text.Digestive
